# ZmqGui

./: .gitignore  README.md  config.example.yaml  pyproject.toml
issues/: display-pnl-currency-and-sign.md
src/zmq_gui/: __init__.py  __main__.py  app.py  bus.py  config.py  theme.py
